# player-rust-rocket

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml
charts/player/: values.yaml
src/: logic.rs  main.rs  models.rs
src/logic/: strategy.rs
src/models/: bet.rs  card.rs  player.rs  rank.rs  suit.rs  table.rs
