[package]
name = "player-rust-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[global]
address = "0.0.0.0"

[dependencies.rocket]
version = "=0.5.0-rc.4"
features = ["json"]

[dependencies.serde]
version = "1.0.192"
features = []

[[bin]]
edition = "2021"
name = "player-rust-rocket"
path = "src/main.rs"